	PR c/18322 	* c-common.c (fname_decl): Don't use line number of decl in 	diagnostic.

testsuite:
	* gcc.dg/func-outside-1.c, gcc.dg/func-outside-2.c: Correct
	expected diagnostic location.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@90365 138bc75d-0d04-0410-961f-82ee72b054a4